--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "claudia-bot-builder": "^2.0.0"
+    "claudia-bot-builder": "^2.0.0",
+    "request": "^2.75.0",
+    "sha256": "^0.2.0"
   }
 }
