--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "claudia-bot-builder": "^2.0.0",
+    "minimal-request-promise": "^1.3.0",
     "request": "^2.75.0",
     "sha256": "^0.2.0"
   }
